<resources>
    <string name="app_name">Dog Finder</string>
    <string name="input_email">Enter email</string>
    <string name="login">Login</string>
    <string name="is_night_mode">is_night_mode</string>
    <string name="input_password">Enter password</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign in</string>
    <string name="input_password_confirm">Confirm password</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="upload_camera">Upload from camera</string>
    <string name="upload_gallery">Upload from gallery</string>
    <string name="dash">dash</string>
    <string name="send_notification">Send notification</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="upload_pic_using">Upload your dog\'s picture</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="confirm">Confirm</string>
    <string name="select_location_message">Please move the pointer to select location of lost/found dog.</string>
    <string name="ok">Okay</string>
    <string name="found">Found</string>
    <string name="lost">Lost</string>
    <string name="lost_dog_image">Lost Dog</string>
    <string name="found_dog_image">Found Dog</string>
    <string name="pick_upload_type">Pick Upload Type</string>
    <string name="upload_from">Upload from</string>
    <string name="submit_picture">Submit Picture</string>
    <string name="uploaded_image">Input Image</string>
    <string name="dog_image">Dog Image</string>
    <string name="matched_results">Results</string>
    <string name="google_maps_api_key">AIzaSyBrPZDULnIR1fQ9H4Npt8oFp6Kx3nuGf-8</string>
    <string name="lorem_ipsum">In publishing and graphic design, Lorem ipsum is a placeholder text commonly used to demonstrate the visual form of a document or a typeface without relying on meaningful content. Lorem ipsum may be used as a placeholder before the final copy is available.</string>
    <string name="distance">Distance</string>
    <string name="duration">Duration</string>
    <string name="matched_image">Matched Image</string>
    <string name="eta">Estimated</string>
    <string name="loading">Loading...</string>
    <string name="no_records_found">No upload record found.\nPlease upload an image of a dog.</string>
    <string name="sign_out">Sign out</string>
    <string name="upload_type">Upload Type:</string>
    <string name="predicted_breed">Predicted Breed:</string>
    <string name="no_result_found">No result found</string>
</resources>