<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_margin="16dp"
        android:id="@+id/tv_upload_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/upload_pic_using"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:id="@+id/ll_upload_gp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@id/tv_upload_title"
        app:layout_constraintStart_toStartOf="@id/tv_upload_title"
        app:layout_constraintTop_toBottomOf="@id/tv_upload_title"
        android:orientation="horizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content">

        <Button
            android:textColor="@color/white"
            android:backgroundTint="@color/purple_400"
            android:layout_weight="1"
            android:id="@+id/btn_upload_camera"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/submit_picture"
            />


        <Button
            android:visibility="gone"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:id="@+id/btn_upload_gallery"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/gallery"
            />
    </LinearLayout>


    <ProgressBar
        android:id="@+id/pb_show"
        android:indeterminateTint="@color/purple_200"
        app:layout_constraintTop_toBottomOf="@id/ll_upload_gp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_show_match_results"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/ll_upload_gp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="0dp"
        android:layout_height="0dp">

    </androidx.recyclerview.widget.RecyclerView>
</androidx.constraintlayout.widget.ConstraintLayout>