<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".maps.SelectLostOrFoundFragment">


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="100dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/login_image">

        </ImageView>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="@color/white_trans"
            android:gravity="center"
            android:padding="32dp"
            android:text="@string/upload_from"
            android:textColor="#475569"
            android:textSize="20sp" />

    </FrameLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:id="@+id/tv_camera"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#bae6fd"
                android:gravity="center"
                android:paddingHorizontal="24dp"
                android:paddingVertical="24dp"
                android:text="@string/camera"
                android:textColor="#475569"
                android:textSize="18sp">
            </TextView>

        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:id="@+id/tv_gallery"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#86efac"
                android:gravity="center"
                android:paddingHorizontal="24dp"
                android:paddingVertical="24dp"
                android:text="@string/gallery"
                android:textColor="#475569"
                android:textSize="18sp">

            </TextView>
        </androidx.cardview.widget.CardView>


    </LinearLayout>


</LinearLayout>