<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".maps.SelectLostOrFoundFragment">


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="100dp">

        <ImageView
            android:scaleType="centerCrop"
            android:src="@drawable/login_image"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

        </ImageView>


        <TextView
            android:layout_gravity="center"
            android:background="@color/white_trans"
            android:textColor="#475569"
            android:textSize="20sp"
            android:padding="32dp"
            android:gravity="center"
            android:text="@string/pick_upload_type"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </FrameLayout>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <androidx.cardview.widget.CardView
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_lost"
                android:textSize="18sp"
                android:textColor="#475569"
                android:background="#bae6fd"

                android:paddingHorizontal="24dp"
                android:paddingVertical="24dp"
                android:gravity="center"
                android:text="@string/lost"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </TextView>

        </androidx.cardview.widget.CardView>



        <androidx.cardview.widget.CardView
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_found"
                android:textSize="18sp"
                android:textColor="#475569"
                android:background="#86efac"
                android:paddingHorizontal="24dp"
                android:paddingVertical="24dp"
                android:gravity="center"
                android:layout_weight="1"
                android:text="@string/found"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            </TextView>
        </androidx.cardview.widget.CardView>




    </LinearLayout>



</LinearLayout>