<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/login_image" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/react" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:elevation="2dp"></FrameLayout>

    </LinearLayout>

    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="120dp"
            android:orientation="vertical"
            android:paddingTop="16dp">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </FrameLayout>

            <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:elevation="2dp"
                android:paddingHorizontal="24dp"
                android:paddingBottom="20dp"
                tools:context=".LoginActivity">


                <RelativeLayout
                    android:id="@+id/rl_logo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/img_logo"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_alignParentTop="true"
                        android:layout_centerInParent="true"
                        android:src="@drawable/paws" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/img_logo"
                        android:fontFamily="@font/comfortaa"
                        android:gravity="center"
                        android:text="@string/app_name"
                        android:textColor="@android:color/white"
                        android:textSize="40dp"
                        android:textStyle="bold" />

                </RelativeLayout>


                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/et_background"
                    android:elevation="2dp"
                    android:hint="@string/input_email"
                    android:inputType="textEmailAddress"
                    android:padding="12dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/rl_logo"
                    tools:ignore="MissingConstraints" />


                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/et_background"
                    android:elevation="2dp"
                    android:hint="@string/input_password"
                    android:inputType="textPassword"
                    android:padding="12dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/et_email"
                    tools:ignore="MissingConstraints" />

                <ProgressBar
                    android:id="@+id/pb_show"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="16dp"
                    android:elevation="10dp"
                    android:indeterminateTint="@color/purple_200"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="@id/et_password"
                    app:layout_constraintStart_toStartOf="@id/et_password"
                    app:layout_constraintTop_toBottomOf="@id/et_password" />


                <Button
                    android:id="@+id/btn_login"
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/sign_in"
                    app:layout_constraintEnd_toEndOf="@id/et_password"
                    app:layout_constraintStart_toStartOf="@id/et_password"
                    app:layout_constraintTop_toBottomOf="@id/et_password"
                    tools:ignore="MissingConstraints" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    app:layout_constraintEnd_toEndOf="@id/et_password"
                    app:layout_constraintStart_toStartOf="@id/et_password"
                    app:layout_constraintTop_toBottomOf="@id/btn_login">

                    <TextView
                        android:id="@+id/tv_dont"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dont_have_account"></TextView>

                    <TextView
                        android:id="@+id/tv_sign_up"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_toRightOf="@id/tv_dont"
                        android:text="@string/sign_up"
                        android:textColor="@color/purple_500" />
                </RelativeLayout>

                <Switch
                    android:id="@+id/switch_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_marginTop="12dp"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="@id/et_password"
                    app:layout_constraintStart_toStartOf="@id/et_password"
                    app:layout_constraintTop_toBottomOf="@id/btn_login"
                    tools:ignore="UseSwitchCompatOrMaterialXml" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>

    </RelativeLayout>


</FrameLayout>



